<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gas Guzzler</string>
    <string name="title_aboutGG">About Gas Guzzler</string>
    <string name="start_button_custom">Start Guzzling</string>
    <string name="Graph_button_custom">Guzzle Graphs</string>
    <string name="gas_price_entry">Total Gas Price</string>
    <string name="gas_price_text">How much did you spend on gas today?</string>
    <string name="next_button_custom">Keep Guzzling!</string>
	<string name="back">Back</string>
	<string name="history_button_custom">Guzzle History</string>
	<string name="gas_volume_text">How many gallons did you buy today?</string>
    <string name="gas_volume_entry">Gallons of gas</string>
    <string name="odometer_text">What is the reading on your odometer?</string>
	<string name="odometer_entry">Mileage on odometer</string>
    <string name="verification_text">Does this look right?</string>
    <string name="gas_price_vText">Gas Price:</string>
    <string name="gas_volume_vText">Gas Volume:</string>
    <string name="gas_price_vEntry">Price</string>
    <string name="gas_volume_vEntry">Volume</string>
    <string name="logo_text">Gas Guzzler Logo</string>
    <string name="verification_button_custom">Done Guzzling!</string>
    <string name="odometer_vEntry">Mileage</string>
    <string name="odometer_vText">Car Mileage:</string>
    <string name="query_test">Show Results</string>
    <string name="summary_to_main">Guzzle Again?</string>
    <string name="summary_text">Here is your Summary</string>
    <string name="avg_ppg_summaryText">Average PPG:</string>
    <string name="avg_mpg_summaryText">Average MPG:</string>
    <string name="avg_vol_summaryText">Average Volume Purchased:</string>
    <string name="ppg_placeholder_summaryText">PPG</string>
    <string name="mgp_placeholder_summaryText">MPG</string>
    <string name="vol_placeholder_summaryText">Avg Volume</string>
    <string name="dollar_sign">$</string>
    <string name="gallons">Gallons</string>
    <string name="miles">Miles</string>
    <string name="about_text">
        Gas Guzzler helps you store information after every fillup 
        at the pump. Gas Guzzler stores the price you paid, the amount
        of gas purchased, and your odometer reading at the pump. 
        Gas Guzzler stores this data and uses it to provide you 
        helpful statistics about your refill habits. 
    </string>
    <string name="dev_by">Developed By:</string>
    <string name="dev_name_ali">Ali Hakimi</string>
    <string name="dev_name_lincoln">Lincoln Samelson</string>
    <string name="dev_name_taylor">Taylor Wolfert</string>
    <string name="logo_credit">Logo Credit:</string>
    <string name="credit_name_alex">Alex Bing</string>
    <string name="special_thanks">Special Thanks to:</string>
    <string name="thanks_name_greg">Greg Dunaway</string>
    <string name="bug_reporting_text">
        If you encounter any defect, problem, or bug while using the 
        Gas Guzzler application, please report the issue at our GutHub 
        repository for us to fix. The following link will take you to our 
        repository:
    </string>
    <string name="bug_reporting_link"><a href="https://github.com/hakims/Gas-Guzzler-Application/issues?state=open">GutHub Bug Tracking Repository</a></string>
    
    
</resources>
