<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="916dp"
	    android:background="@drawable/ggbackground"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".MainActivity" >

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/im_priceLogoImage"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="19dp"
	        android:text="@string/about_text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/TextView03"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/TextView02"
	        android:layout_marginTop="40dp"
	        android:layout_toLeftOf="@+id/textView3"
	        android:text="@string/logo_credit"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <ImageView
	        android:id="@+id/im_priceLogoImage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="26dp"
	        android:contentDescription="@string/logo_text"
	        android:src="@drawable/gg_logo" />

	    <TextView
	        android:id="@+id/textView4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView1"
	        android:layout_below="@+id/textView1"
	        android:layout_marginTop="28dp"
	        android:text="@string/bug_reporting_text"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/bug_page_link"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView4"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="16dp"
	        android:text="@string/bug_reporting_link"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView2"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="16dp"
	        android:text="@string/dev_name_ali"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/TextView01"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView3"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="16dp"
	        android:text="@string/dev_name_lincoln"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/TextView02"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/TextView01"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="16dp"
	        android:text="@string/dev_name_taylor"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/TextView04"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/TextView03"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="14dp"
	        android:text="@string/credit_name_alex"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/textView6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/TextView03"
	        android:layout_below="@+id/TextView04"
	        android:layout_marginTop="20dp"
	        android:text="@string/special_thanks"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/textView7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textView6"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="20dp"
	        android:text="@string/thanks_name_greg"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView4"
	        android:layout_below="@+id/bug_page_link"
	        android:layout_marginTop="26dp"
	        android:text="@string/dev_by"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	</RelativeLayout>

</ScrollView>