<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/ggbackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <ImageView
        android:id="@+id/im_odometerLogoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/logo_text"
        android:src="@drawable/gg_logo" />

    <TextView
        android:id="@+id/text_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/im_odometerLogoImage"
        android:layout_centerHorizontal="true"
        android:text="@string/summary_text"
        android:textSize="24sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/b_toHistory"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:background="@drawable/buttonshape_custom"
        android:text="@string/history_button_custom"
        android:textColor="#00ADA9"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b_toHome"
        android:layout_width="215dp"
        android:layout_height="60dp"
        android:layout_above="@+id/b_toGraphs"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttonshape_custom"
        android:text="@string/summary_to_main"
        android:textColor="#00ADA9"
        android:textSize="25sp" />

    <Button
        android:id="@+id/b_toGraphs"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_above="@+id/b_toHistory"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttonshape_custom"
        android:text="@string/Graph_button_custom"
        android:textColor="#00ADA9"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_ppgText"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_below="@+id/text_summary"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@id/text_summary"
        android:layout_marginLeft="40dp"
        android:ems="10"
        android:gravity="right"
        android:textSize="16sp"
        android:text="@string/avg_ppg_summaryText" />

    <TextView
        android:id="@+id/tv_ppgDisplay"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_below="@+id/text_summary"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/text_summary"
        android:ems="10"
        android:hint="@string/ppg_placeholder_summaryText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_mpgsText"
        android:layout_width="105dp"
        android:layout_height="20dp"
        android:layout_alignRight="@+id/tv_ppgText"
        android:layout_below="@+id/tv_ppgText"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="right"
        android:text="@string/avg_mpg_summaryText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_mpgDisplay"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_below="@+id/tv_ppgDisplay"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@id/tv_ppgDisplay"
        android:ems="10"
        android:textSize="16sp"
        android:hint="@string/mgp_placeholder_summaryText" />

    <TextView
        android:id="@+id/tv_volumePurchasedText"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@id/tv_mpgsText"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@id/tv_mpgsText"
        android:textSize="16sp"
        android:gravity="right"
        android:ems="10"
        android:text="@string/avg_vol_summaryText" />

    <TextView
        android:id="@+id/tv_averageVolumeDisplay"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_below="@id/tv_mpgDisplay"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@id/tv_mpgDisplay"
        android:textSize="16sp"
        android:ems="10"
        android:hint="@string/vol_placeholder_summaryText" />

</RelativeLayout>